--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2025 꿈다락문화예술학교</title>
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./js/index.js" />
 </head>
 
 <body>
