Subpage page upload

--- a/index.html
+++ b/index.html
@@ -21,17 +21,24 @@
             </div>
 
             <div class="poster-container">
-                <div class="poster-item" onclick="alert('어린이 미디어 탐광대')">
-                    <div class="poster-placeholder">&lt;img&gt;</div>
-                    <div class="poster-label">어린이 미디어 탐광대</div>
-                </div>
-                <div class="poster-item" onclick="alert('나도 천아트 작가')">
-                    <div class="poster-placeholder">&lt;img&gt;</div>
-                    <div class="poster-label">나도 천아트 작가</div>
-                </div>
-            </div>~
+                <a href="/child.html">
+                    <div class="poster-item">
+                        <div class="poster-placeholder">&lt;img&gt;</div>
+                        <div class="poster-label">어린이 미디어 탐광대</div>
+                    </div>
+                </a>
+                <a href="/cloth_artist.html">
+                    <div class="poster-item">
+                        <div class="poster-placeholder">&lt;img&gt;</div>
+                        <div class="poster-label">나도 천아트 작가</div>
+                    </div>
+                </a>
+            </div>
 
-            <div class="footer-bar"></div>
+            <div class="footer-bar">
+                COPYRIGHT © 2025 꿈다락문화예술학교 & 뜨리디미디어. ALL RIGHTS RESERVED
+                자료 및 내용 오류 수정 문의 : coolwind0426@naver.com
+            </div>
         </section>
 </body>
 
