Subpage page upload

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
             <div class="poster-container">
                 <a href="/child.html">
                     <div class="poster-item">
-                        <div class="poster-placeholder">&lt;img&gt;</div>
+                        <div class="poster-placeholder"><img src="/img/Screenshot 2025-12-12 at 15.56.06.JPG"></div>
                         <div class="poster-label">어린이 미디어 탐광대</div>
                     </div>
                 </a>
                 <a href="/cloth_artist.html">
                     <div class="poster-item">
-                        <div class="poster-placeholder">&lt;img&gt;</div>
+                        <div class="poster-placeholder"><img src="/img/Screenshot 2025-12-12 at 15.57.15.JPG"></div>
                         <div class="poster-label">나도 천아트 작가</div>
                     </div>
                 </a>
             </div>
 
             <div class="footer-bar">
-                COPYRIGHT © 2025 꿈다락문화예술학교 & 뜨리디미디어. ALL RIGHTS RESERVED
+                COPYRIGHT © 2025 꿈다락문화예술학교 & 협동조합 어감. ALL RIGHTS RESERVED
                 자료 및 내용 오류 수정 문의 : coolwind0426@naver.com
             </div>
         </section>
