--- a/cloth_artist.html
+++ b/cloth_artist.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>어린이 미디어 탐광대_2025 꿈다락문화예술학교</title>
+    <title>나도 천아트 작가_2025 꿈다락문화예술학교</title>
     <link rel="stylesheet" href="./css/cloth_artist.css" />
 </head>
 
@@ -28,20 +28,20 @@
             <nav>
                 <a href="#program">프로그램 사진</a>
                 <div class="sub-nav">
-                    <a href="#session1">1회차</a>
-                    <a href="#session2">2회차</a>
-                    <a href="#session3">3회차</a>
-                    <a href="#session4">4회차</a>
-                    <a href="#session5">5회차</a>
-                    <a href="#session6">6회차</a>
-                    <a href="#session7">7회차</a>
-                    <a href="#session8">8회차</a>
-                    <a href="#session9">9회차</a>
-                    <a href="#session10">10회차</a>
-                    <a href="#session11">11회차</a>
-                    <a href="#session12">12회차</a>
-                    <a href="#session13">13회차</a>
-                    <a href="#session14">14회차</a>
+                    <a href="#session1">[1기] 1회차</a>
+                    <a href="#session2">[1기] 2회차</a>
+                    <a href="#session3">[1기] 3회차</a>
+                    <a href="#session4">[1기] 4회차</a>
+                    <a href="#session5">[1기] 5회차</a>
+                    <a href="#session6">[1기] 6회차</a>
+                    <a href="#session7">[1기] 7회차</a>
+                    <a href="#session8">[2기] 1회차</a>
+                    <a href="#session9">[2기] 2회차</a>
+                    <a href="#session10">[2기] 3회차</a>
+                    <a href="#session11">[2기] 4회차</a>
+                    <a href="#session12">[2기] 5회차</a>
+                    <a href="#session13">[2기] 6회차</a>
+                    <a href="#session14">[2기] 7회차</a>
                 </div>
                 <a href="#sketch">스케치 영상</a>
                 <a href="#results">수업 결과물</a>
@@ -54,7 +54,7 @@
             <div class="session-container">
                 <!-- 1회차 -->
                 <div class="session-item" id="session1">
-                    <h3 class="session-title">1회차 : OT 프로그램 소개 및 개인별 소개하기</h3>
+                    <h3 class="session-title">[1기] 1회차 : 꽃그림 패브릭 아트 ‘구절초 꽃말은 순수’</h3>
                     <div class="session-images">
                         <div class="content-item"><img
                                 src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/1%ED%9A%8C%EC%B0%A8/KakaoTalk_20250628_151842744_04.jpg"
@@ -67,7 +67,7 @@
 
                 <!-- 2회차 -->
                 <div class="session-item" id="session2">
-                    <h3 class="session-title">2회차 : 내가 생각하는 양동시장 표현하기</h3>
+                    <h3 class="session-title">[1기] 2회차 : 꽃그림 패브릭 아트 ‘개망초 꽃말은 화해’</h3>
                     <div class="session-images">
                         <div class="content-item"><img
                                 src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/2%ED%9A%8C%EC%B0%A8/KakaoTalk_20250705_170151892_06.jpg"
@@ -80,7 +80,7 @@
 
                 <!-- 3회차 -->
                 <div class="session-item" id="session3">
-                    <h3 class="session-title">3회차 : 양동시장 탐방 및 지도 만들기 1</h3>
+                    <h3 class="session-title">[1기] 3회차 : 꽃그림 패브릭 아트 ‘아무 곳에서나 예쁜 들꽃 같은 당신’</h3>
                     <div class="session-images">
                         <div class="content-item"><img
                                 src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/3%ED%9A%8C%EC%B0%A8/KakaoTalk_20250712_142202515_09.jpg"
@@ -95,7 +95,7 @@
 
             <!-- 4회차 -->
             <div class="session-item" id="session4">
-                <h3 class="session-title">4회차 : 양동시장 탐방 및 지도 만들기 2</h3>
+                <h3 class="session-title">[1기] 4회차 : 꽃그림 패브릭 아트 ‘천덕꾸러기 새생명 프로젝트’</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/4%ED%9A%8C%EC%B0%A8/KakaoTalk_20250729_171846936_09.jpg"
@@ -109,7 +109,7 @@
 
             <!-- 5회차 -->
             <div class="session-item" id="session5">
-                <h3 class="session-title">5회차 : 나도 아날로그 사진 작가 1</h3>
+                <h3 class="session-title">[1기] 5회차 : 소박하고 멋스러운 사시코 바느질</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/5%ED%9A%8C%EC%B0%A8/KakaoTalk_20250729_171856552.jpg"
@@ -123,7 +123,7 @@
 
             <!-- 6회차 -->
             <div class="session-item" id="session6">
-                <h3 class="session-title">6회차 : 나도 아날로그 사진 작가 2</h3>
+                <h3 class="session-title">[1기] 6회차 : 고급스러움 가득한 티타임 만들기</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/6%ED%9A%8C%EC%B0%A8/KakaoTalk_20250802_132702265_15.jpg"
@@ -136,7 +136,7 @@
 
             <!-- 7회차 -->
             <div class="session-item" id="session7">
-                <h3 class="session-title">7회차 : 양동시장 최고 레시피를 찾아라 1</h3>
+                <h3 class="session-title">[1기] 7회차 : 양동시장 최고 레시피를 찾아라 1</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/7%ED%9A%8C%EC%B0%A8/KakaoTalk_20250901_174709766_15.jpg"
@@ -149,7 +149,7 @@
 
             <!-- 8회차 -->
             <div class="session-item" id="session8">
-                <h3 class="session-title">8회차 : 양동시장 최고 레시피를 찾아라 2</h3>
+                <h3 class="session-title">[2기] 1회차 : 꽃그림 패브릭 아트 ‘구절초 꽃말은 순수’</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/8%ED%9A%8C%EC%B0%A8/KakaoTalk_20250901_174538385.jpg"
@@ -162,7 +162,7 @@
 
             <!-- 9회차 -->
             <div class="session-item" id="session9">
-                <h3 class="session-title">9회차 : 내가 생각하는 양동시장 주제곡 만들기</h3>
+                <h3 class="session-title">[2기] 2회차 : 꽃그림 패브릭 아트 ‘개망초 꽃말은 화해’</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/9%ED%9A%8C%EC%B0%A8/KakaoTalk_20250823_191233674_15.jpg"
@@ -175,7 +175,7 @@
 
             <!-- 10회차 -->
             <div class="session-item" id="session10">
-                <h3 class="session-title">10회차 : 양동시장 최고 레시피를 찾아라 3</h3>
+                <h3 class="session-title">[2기] 3회차 : 꽃그림 패브릭 아트 ‘아무 곳에서나 예쁜 들꽃 같은 당신’</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/10%ED%9A%8C%EC%B0%A8/KakaoTalk_20250830_132837987_07.jpg"
@@ -188,7 +188,7 @@
 
             <!-- 11회차 -->
             <div class="session-item" id="session11">
-                <h3 class="session-title">11회차 : 내가 생각하는 양동시장 관련 영상 만들기 1</h3>
+                <h3 class="session-title">[2기] 4회차 : 꽃그림 패브릭 아트 ‘천덕꾸러기 새생명 프로젝트’</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/11%ED%9A%8C%EC%B0%A8/KakaoTalk_20250906_123600682_02.jpg"
@@ -201,7 +201,7 @@
 
             <!-- 12회차 -->
             <div class="session-item" id="session12">
-                <h3 class="session-title">12회차 : 내가 생각하는 양동시장 관련 영상 만들기 2</h3>
+                <h3 class="session-title">[2기] 5회차 : 소박하고 멋스러운 사시코 바느질</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/12%ED%9A%8C%EC%B0%A8/KakaoTalk_20250929_160704262_05.jpg"
@@ -214,7 +214,7 @@
 
             <!-- 13회차 -->
             <div class="session-item" id="session13">
-                <h3 class="session-title">13회차 : 미래세계 전통시장 상상하기 1</h3>
+                <h3 class="session-title">[2기] 6회차 : 고급스러움 가득한 티타임 만들기</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/13%ED%9A%8C%EC%B0%A8/KakaoTalk_20250920_161901355.jpg"
@@ -227,7 +227,7 @@
 
             <!-- 14회차 -->
             <div class="session-item" id="session14">
-                <h3 class="session-title">14회차 : 미래세계 전통시장 상상하기 2</h3>
+                <h3 class="session-title">[2기] 7회차 : 사시코 바느질로 ‘천덕꾸러기 새생명 프로젝트’</h3>
                 <div class="session-images">
                     <div class="content-item"><img
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/14%ED%9A%8C%EC%B0%A8/KakaoTalk_20250927_115223941_05.jpg"
