--- a/child.html
+++ b/child.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>어린이 미디어 탐광대_2025 꿈다락문화예술학교</title>
     <link rel="stylesheet" href="./css/child.css" />
+    <script src="./js/child.js" defer></script>
+
 </head>
 
 <body>
@@ -91,7 +93,6 @@
                     </div>
 
                 </div>
-            </div>
 
             <!-- 4회차 -->
             <div class="session-item" id="session4">
@@ -105,7 +106,7 @@
                             alt="4회차"></div>
                 </div>
             </div>
-            </div>
+        
 
             <!-- 5회차 -->
             <div class="session-item" id="session5">
@@ -118,7 +119,6 @@
                             src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/5%ED%9A%8C%EC%B0%A8/KakaoTalk_20250729_171929596_13.jpg"
                             alt="5회차"></div>
                 </div>
-            </div>
             </div>
 
             <!-- 6회차 -->
@@ -339,5 +339,11 @@
         </section>
     </main>
 </body>
+<!-- 이미지 팝업 모달 -->
+<div id="imageModal" class="image-modal">
+    <span class="image-modal-close">&times;</span>
+    <img class="image-modal-content" id="imageModalImg">
+</div>
+
 
 </html>
