--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <div class="poster-container">
                 <a href="/child.html">
                     <div class="poster-item">
-                        <div class="poster-placeholder"><img src="/img/Screenshot 2025-12-12 at 15.56.06.JPG"></div>
+                        <div class="poster-placeholder"><img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/KakaoTalk_20250526_174821853_02.jpg"></div>
                         <div class="poster-label">어린이 미디어 탐광대</div>
                     </div>
                 </a>
                 <a href="/cloth_artist.html">
                     <div class="poster-item">
-                        <div class="poster-placeholder"><img src="/img/Screenshot 2025-12-12 at 15.57.15.JPG"></div>
+                        <div class="poster-placeholder"><img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/KakaoTalk_20250526_174828675_02.jpg"></div>
                         <div class="poster-label">나도 천아트 작가</div>
                     </div>
                 </a>
