--- a/child.html
+++ b/child.html
@@ -52,7 +52,7 @@
 
         <!-- 프로그램 사진 섹션 -->
         <section id="program" class="content-section">
-            <h2 class="section-title">프로그램 사진</h2>
+            <h2 class="section-title">📷 프로그램 사진</h2>
             <div class="session-container">
                 <!-- 1회차 -->
                 <div class="session-item" id="session1">
@@ -242,7 +242,7 @@
 
         <!-- 스케치 영상 섹션 -->
         <section id="sketch" class="sketch-section">
-            <h2 class="section-title">스케치 영상</h2>
+            <h2 class="section-title">🎬 스케치 영상</h2>
             <div class="sketch-content">
                 <div class="video-placeholder">
                     <svg class="video-icon" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -261,7 +261,7 @@
 
         <!-- 수업 결과물 섹션 -->
         <section id="results" class="results-section">
-            <h2 class="section-title">수업 결과물</h2>
+            <h2 class="section-title">🎯 수업 결과물</h2>
             <div class="results-grid">
                 <div class="result-item">
                     <div class="result-images">
