--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <!-- 메인 콘텐츠 -->
     <main class="main-content">
         <!-- 히어로 섹션 -->
@@ -23,23 +22,30 @@
             <div class="poster-container">
                 <a href="/child.html">
                     <div class="poster-item">
-                        <div class="poster-placeholder"><img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/KakaoTalk_20250526_174821853_02.jpg"></div>
+                        <div class="poster-placeholder">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/KakaoTalk_20250526_174821853_02.jpg"
+                                alt="어린이 미디어 탐광대">
+                        </div>
                         <div class="poster-label">어린이 미디어 탐광대</div>
                     </div>
                 </a>
                 <a href="/cloth_artist.html">
                     <div class="poster-item">
-                        <div class="poster-placeholder"><img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/KakaoTalk_20250526_174828675_02.jpg"></div>
+                        <div class="poster-placeholder">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/KakaoTalk_20250526_174828675_02.jpg"
+                                alt="나도 천아트 작가">
+                        </div>
                         <div class="poster-label">나도 천아트 작가</div>
                     </div>
                 </a>
             </div>
 
             <div class="footer-bar">
-                COPYRIGHT © 2025 꿈다락문화예술학교 & 협동조합 어감. ALL RIGHTS RESERVED
+                COPYRIGHT © 2025 꿈다락문화예술학교 & 협동조합 어감. ALL RIGHTS RESERVED<br>
                 자료 및 내용 오류 수정 문의 : coolwind0426@naver.com
             </div>
         </section>
+    </main>
 </body>
 
 </html>
