--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2025 꿈다락문화예술학교</title>
+    <title>2025 꿈다락문화예술학교& 협동조합 어감</title>
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./js/index.js" />
 </head>
@@ -24,9 +24,9 @@
                     <div class="poster-item">
                         <div class="poster-placeholder">
                             <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/KakaoTalk_20250526_174821853_02.jpg"
-                                alt="어린이 미디어 탐광대">
+                                alt="어린이 미디어 탐방대">
                         </div>
-                        <div class="poster-label">어린이 미디어 탐광대</div>
+                        <div class="poster-label">어린이 미디어 탐방대</div>
                     </div>
                 </a>
                 <a href="/cloth_artist.html">
