--- a/cloth_artist.html
+++ b/cloth_artist.html
@@ -79,7 +79,161 @@
                     </div>
                 </div>
 
-                <!-- 3-14회차는 길이 문제로 생략, 필요시 동일한 패턴으로 추가 -->
+               <!-- 3회차 -->
+                <div class="session-item" id="session3">
+                    <h3 class="session-title">[1기] 3회차 : 꽃그림 패브릭 아트 '아무 곳에서나 예쁜 들꽃 같은 당신'</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/3%ED%9A%8C%EC%B0%A8/KakaoTalk_20250715_175730971_08.jpg" alt="3회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/3%ED%9A%8C%EC%B0%A8/KakaoTalk_20250715_175730971_09.jpg" alt="3회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 4회차 -->
+                <div class="session-item" id="session4">
+                    <h3 class="session-title">[1기] 4회차 : 꽃그림 패브릭 아트 '천덕꾸러기 새생명 프로젝트'</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/4%ED%9A%8C%EC%B0%A8/KakaoTalk_20250722_114818337_18.jpg" alt="4회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/4%ED%9A%8C%EC%B0%A8/KakaoTalk_20250722_114818337_29.jpg" alt="4회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 5회차 -->
+                <div class="session-item" id="session5">
+                    <h3 class="session-title">[1기] 5회차 : 소박하고 멋스러운 사시코 바느질</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/5%ED%9A%8C%EC%B0%A8/KakaoTalk_20250729_171421977_17.jpg" alt="5회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/5%ED%9A%8C%EC%B0%A8/KakaoTalk_20250729_171421977_27.jpg" alt="5회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 6회차 -->
+                <div class="session-item" id="session6">
+                    <h3 class="session-title">[1기] 6회차 : 고급스러움 가득한 티타임 만들기</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/6%ED%9A%8C%EC%B0%A8/KakaoTalk_20250805_133017937_03.jpg" alt="6회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/6%ED%9A%8C%EC%B0%A8/KakaoTalk_20250805_133706155_04.jpg" alt="6회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 7회차 -->
+                <div class="session-item" id="session7">
+                    <h3 class="session-title">[1기] 7회차 : 양동시장 최고 레시피를 찾아라 1</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/7%ED%9A%8C%EC%B0%A8/KakaoTalk_20250901_161150460_05.jpg" alt="7회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/1%EA%B8%B0/7%ED%9A%8C%EC%B0%A8/KakaoTalk_20250901_161150460_18.jpg" alt="7회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 8회차 (2기 1회차) -->
+                <div class="session-item" id="session8">
+                    <h3 class="session-title">[2기] 1회차 : 꽃그림 패브릭 아트 '구절초 꽃말은 순수'</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/1%ED%9A%8C%EC%B0%A8/KakaoTalk_20250902_133458563_19.jpg" alt="8회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/1%ED%9A%8C%EC%B0%A8/KakaoTalk_20250902_133458563_20.jpg" alt="8회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 9회차 (2기 2회차) -->
+                <div class="session-item" id="session9">
+                    <h3 class="session-title">[2기] 2회차 : 꽃그림 패브릭 아트 '개망초 꽃말은 화해'</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/2%ED%9A%8C%EC%B0%A8/KakaoTalk_20250909_151329825_17.jpg" alt="9회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/2%ED%9A%8C%EC%B0%A8/KakaoTalk_20250909_151329825_19.jpg" alt="9회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 10회차 (2기 3회차) -->
+                <div class="session-item" id="session10">
+                    <h3 class="session-title">[2기] 3회차 : 꽃그림 패브릭 아트 '아무 곳에서나 예쁜 들꽃 같은 당신'</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/3%ED%9A%8C%EC%B0%A8/KakaoTalk_20250916_124853538_16.jpg" alt="10회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/3%ED%9A%8C%EC%B0%A8/KakaoTalk_20250916_124913161_02.jpg" alt="10회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 11회차 (2기 4회차) -->
+                <div class="session-item" id="session11">
+                    <h3 class="session-title">[2기] 4회차 : 꽃그림 패브릭 아트 '천덕꾸러기 새생명 프로젝트'</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/4%ED%9A%8C%EC%B0%A8/KakaoTalk_20250923_152100273.jpg" alt="11회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/4%ED%9A%8C%EC%B0%A8/KakaoTalk_20250923_154458418_14.jpg" alt="11회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 12회차 (2기 5회차) -->
+                <div class="session-item" id="session12">
+                    <h3 class="session-title">[2기] 5회차 : 소박하고 멋스러운 사시코 바느질</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/5%ED%9A%8C%EC%B0%A8/KakaoTalk_20250930_163622069_05.jpg" alt="12회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/5%ED%9A%8C%EC%B0%A8/KakaoTalk_20250930_163622069_17.jpg" alt="12회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 13회차 (2기 6회차) -->
+                <div class="session-item" id="session13">
+                    <h3 class="session-title">[2기] 6회차 : 고급스러움 가득한 티타임 만들기</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/6%ED%9A%8C%EC%B0%A8/KakaoTalk_20251014_181536366_04.jpg" alt="13회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/1%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EC%96%B4%EB%A6%B0%EC%9D%B4%EB%AF%B8%EB%94%94%EC%96%B4%ED%83%90%EB%B0%A9%EB%8C%80)/13%ED%9A%8C%EC%B0%A8/KakaoTalk_20250920_161901355_12.jpg" alt="13회차">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 14회차 (2기 7회차) -->
+                <div class="session-item" id="session14">
+                    <h3 class="session-title">[2기] 7회차 : 사시코 바느질로 '천덕꾸러기 새생명 프로젝트'</h3>
+                    <div class="session-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/7%ED%9A%8C%EC%B0%A8/KakaoTalk_20251107_165852941_07.jpg" alt="14회차">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/2%EA%B8%B0/7%ED%9A%8C%EC%B0%A8/KakaoTalk_20251107_165852941_23.jpg" alt="14회차">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
