--- a/cloth_artist.html
+++ b/cloth_artist.html
@@ -253,6 +253,7 @@
         </section>
 
         <!-- 수업 결과물 섹션 -->
+        <!-- 수업 결과물 섹션 -->
         <section id="results" class="results-section">
             <h2 class="section-title">🎯수업 결과물</h2>
             <div class="results-grid">
@@ -263,6 +264,53 @@
                         </div>
                         <div class="content-item">
                             <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250715_175718662_01.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250715_175718662_02.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250722_114818337_07.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250722_114818337_24.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250722_114818337_26.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250722_114818337_28.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250805_133706155_14.jpg" alt="수업결과물">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="result-item">
+                    <div class="result-images">
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250805_133706155_16.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250805_133706155_19.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250902_124419653.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250902_124419653_01.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250909_151921635_01.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250909_151921635_02.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250916_124104360_01.jpg" alt="수업결과물">
+                        </div>
+                        <div class="content-item">
+                            <img src="https://pub-94f9d90bbabc45f2bb32a690de2880c3.r2.dev/2%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8%20%EC%82%AC%EC%A7%84(%EB%82%98%EB%8F%84%EC%B2%9C%EC%95%84%ED%8A%B8%EC%9E%91%EA%B0%80)/%EC%88%98%EC%97%85%EA%B2%B0%EA%B3%BC%EB%AC%BC/KakaoTalk_20250923_152100273_05.jpg" alt="수업결과물">
                         </div>
                     </div>
                 </div>
